# turtlebot-fleet-ops

./: .flake8  .gitattributes  .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: ros2-ci.yml
control/fleet_gateway/: README.md  package.xml  setup.cfg  setup.py
docs/: git-workflow.md  setup.md
docs/case-studies/: lds02-scan-data-recovery.md  robot-agent-stale-recovery.md  safety-watchdog-neutral-rearm.md  slam-toolbox-variable-scan-normalization.md  zenoh-service-timeout-rmw-mismatch.md
docs/design/: README.md  phase-3-robot-agent.md  phase-4-tb1-web-dashboard.md  phase-5-tb1-navigation.md  phase-6-tb1-operations.md  phase-7-ros2-log-mlops.md  phase-8-web-patrol-mapping-diagnostics.md  project-scope.md  semantic-map-zones.md
docs/learning-log/: 2026-07-15-docker-desktop-wsl-install.md  2026-07-15-git-workflow-and-first-branch.md  2026-07-15-github-cli-and-remote-repository.md  2026-07-15-github-pr-review-and-main-ruleset.md  2026-07-15-phase-0-environment-survey.md  2026-07-15-phase-1-tb1-bringup-and-lds02-gpio-uart.md  2026-07-15-phase-2-tb1-watchdog-deployment.md  2026-07-15-wsl-ros2-humble-install.md  2026-07-16-phase-3-robot-agent-implementation.md  2026-07-16-phase-3-tb1-robot-agent-validation.md  2026-07-16-phase-4-web-dashboard-and-zenoh.md  2026-07-16-phase-5-map-artifact-validation.md  2026-07-16-phase-5-navigation-preflight.md  2026-07-16-phase-5-new-location-clean-mapping.md  2026-07-16-phase-5-slam-and-zenoh-safety-validation.md  2026-07-16-phase-5-web-nav2-action-lifecycle.md  2026-07-16-single-robot-mvp-scope-decision.md  2026-07-16-tb1-residual-teleop-command-incident.md  2026-07-16-tb2-bootstrap-and-isolated-tests.md  2026-07-16-weekend-robotless-handoff.md  2026-07-17-phase-5-tb1-navigation-implementation.md  2026-07-18-control-pc-readiness.md  2026-07-18-current-pc-baseline.md  2026-07-18-tb1-acceptance-deployment.md  2026-07-18-tb1-robotless-operations.md  2026-07-19-phase-5-tb1-navigation-acceptance.md  2026-07-19-phase-6-tb1-operations-acceptance.md  2026-07-19-phase-7-ros2-log-mlops-and-map-viewport.md  2026-07-19-single-screen-dashboard-connectivity-audit.md  2026-07-20-phase-8-web-patrol-mapping-diagnostics.md  README.md
docs/setup/: docker-desktop-wsl.md  ros2-humble-wsl.md  ros2-log-mlops.md  tb1-bringup.md  tb1-navigation.md  tb1-operation-command-guide.md  tb1-operations.md  tb1-robot-agent.md  tb1-safe-teleoperation.md  tb1-slam-nav2.md  tb1-supervised-mapping.md  tb1-web-dashboard.md  tb1-web-patrol-mapping.md  weekend-robotless-development.md
docs/study/: README.md  control-pc-wsl-ros2-readiness.md  phase-1-tb1-bringup.md  phase-2-safe-teleoperation.md  phase-3-robot-agent.md  phase-4-web-fleet-gateway.md  phase-5-slam-nav2.md  phase-5-tb1-navigation.md  phase-6-tb1-operations.md  (+2 more)
robot/fleet_interfaces/: CMakeLists.txt  README.md  package.xml
robot/fleet_interfaces/action/: NavigateRobot.action
robot/fleet_interfaces/msg/: MappingStatus.msg  NavigationLease.msg  NavigationStatus.msg  RobotStatus.msg  SafetyStatus.msg
robot/fleet_interfaces/srv/: ManualCommand.srv  SaveMap.srv  SetMotionMode.srv  SetOperatingProfile.srv
robot/fleet_navigation/: README.md  package.xml  setup.cfg  setup.py
robot/fleet_navigation/config/: tb1_nav2.yaml  tb1_slam.yaml
robot/fleet_navigation/fleet_navigation/: __init__.py  map_validator.py  motion_guard.py  pose_checkpoint.py  safety_contract.py  scan_normalizer.py  supervised_motion.py
robot/fleet_navigation/launch/: navigation.launch.py  slam.launch.py
robot/fleet_navigation/maps/: README.md
robot/fleet_navigation/test/: test_config.py  test_map_validator.py  test_motion_guard.py  test_pep257.py  test_pose_checkpoint.py  test_safety_contract.py  test_scan_normalizer.py  test_supervised_motion_integration.py  test_supervised_motion_runtime.py  test_zenoh_safety_contract.py
robot/navigation_agent/: README.md  package.xml  setup.cfg  setup.py
robot/navigation_agent/config/: tb1.yaml  tb1_map_annotation_filters.yaml  tb1_nav2_rewrites.yaml  tb1_scan_normalizer.yaml  tb1_slam.yaml  tb1_web_telemetry.yaml
robot/navigation_agent/launch/: navigation_agent.launch.py  tb1_mapping.launch.py  tb1_nav2_navigation.launch.py  tb1_navigation.launch.py
robot/navigation_agent/navigation_agent/: __init__.py  agent_node.py  arbiter_node.py  goal_progress.py  manual_control_node.py  map_annotation_filter.py  map_validator.py  model.py  pose_checkpoint.py  profile_manager_node.py  scan_normalizer.py  supervised_motion.py  web_telemetry.py
robot/navigation_agent/test/: test_agent_shutdown.py  test_arbiter_node.py  test_goal_progress.py  test_manual_control_node.py  test_map_annotation_filter.py  test_map_validator.py  test_model.py  test_motion_guard.py  test_navigation_agent_node.py  test_navigation_clearance.py  test_operational_configuration.py  test_pep257.py  test_pose_checkpoint.py  test_profile_manager_node.py  test_scan_normalizer.py  test_supervised_motion_integration.py  test_supervised_motion_runtime.py  test_web_telemetry.py  test_zenoh_contract.py
robot/robot_agent/: README.md  package.xml  setup.py
robot/robot_agent/config/: tb1.yaml
robot/robot_agent/launch/: robot_agent.launch.py
robot/robot_agent/robot_agent/: __init__.py  model.py  node.py  rosout_relay.py  system_metrics.py
robot/robot_agent/test/: test_flake8.py  test_model.py  test_node.py  test_rosout_relay.py  test_system_metrics.py
robot/safety_watchdog/: README.md  package.xml  setup.cfg  setup.py
robot/safety_watchdog/config/: tb1.yaml
robot/safety_watchdog/launch/: safety_watchdog.launch.py
robot/safety_watchdog/safety_watchdog/: __init__.py  node.py  policy.py
robot/safety_watchdog/test/: test_flake8.py  test_policy.py  test_watchdog_node.py
robot/safety_watchdog_guard/: CMakeLists.txt  package.xml
robot/safety_watchdog_guard/include/safety_watchdog_guard/: guard_policy.hpp
robot/safety_watchdog_guard/src/: watchdog_guard.cpp
robot/safety_watchdog_guard/test/: test_guard_policy.cpp
screenshot/: TurtleBot Fleet Ops_IC-PBL_LLM기반_데이터엔지니어링_MLOps자동화_김대건_실동작검증_최종본.hwp
(+116 files in other folders)
