<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_agent</name>
  <version>0.1.0</version>
  <description>Publish freshness-aware TurtleBot fleet status.</description>
  <maintainer email="eorjs135795@gmail.com">spongebobDG</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>fleet_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
